# facure-augmented

./: .gitignore  .mcp.json  CLAUDE.md  CURRENT_WORK.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
augmented/: README.md  common.py  pyproject.toml
augmented/docs/: CHAPTER_INDEX.md  DATA_DICTIONARY.md  LEARNING_PATHS.md
augmented/notebooks/01_introduction_to_causality/: 01_potential_outcomes.ipynb  02_association_vs_causation.ipynb  03_confounding_example.ipynb
augmented/notebooks/02_randomised_experiments/: 01_rct_gold_standard.ipynb  02_ideal_experiment.ipynb  03_rct_analysis.ipynb
augmented/notebooks/03_stats_review/: 01_standard_error.ipynb  02_confidence_intervals.ipynb  03_hypothesis_testing.ipynb  04_practical_significance.ipynb
augmented/notebooks/04_graphical_causal_models/: 01_dag_basics.ipynb  02_confounding.ipynb  03_selection_bias.ipynb  04_good_bad_controls.ipynb
augmented/notebooks/05_linear_regression/: 01_all_you_need_is_regression.ipynb  02_regression_theory.ipynb  03_regression_nonrandom_data.ipynb  04_omitted_variable_bias.ipynb
augmented/notebooks/05_linear_regression_part_2_intro_to_DoubleML/: 01_from_fwl_to_robinson.ipynb  02_neyman_orthogonality.ipynb  03_regularization_problem.ipynb  04_cross_fitting.ipynb  05_dml_implementation.ipynb
augmented/notebooks/06_grouped_dummy_regression/: 01_grouped_regression.ipynb  02_dummy_variables.ipynb  03_interactions_nonparametric.ipynb
augmented/notebooks/07_beyond_confounders/: 01_good_controls.ipynb  02_bad_controls_colliders.ipynb  03_selection_bias_mediators.ipynb  04_cop_decomposition.ipynb
augmented/notebooks/08_instrumental_variables/: 01_iv_intuition.ipynb  02_two_stage_least_squares.ipynb  03_multiple_instruments.ipynb  04_weak_instruments.ipynb
augmented/notebooks/09_noncompliance_late/: 01_compliance_types.ipynb  02_late_vs_ate.ipynb  03_wald_and_2sls.ipynb  04_compliance_diagnostics.ipynb
augmented/notebooks/10_matching/: 01_matching_intuition.ipynb  (+3 more)
augmented/schema/: section.schema.json
augmented/scripts/: validate_notebooks.py
augmented/tests/: test_coverage.py  test_schema.py
augmented/viz/: __init__.py
(+256 files in other folders)
