[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "facure_augment"
version = "0.1.0"
description = "Augmented Causal Inference notebooks based on Facure's 'Causal Inference for the Brave and True'"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Brandon Behring"}
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "statsmodels>=0.14",
    "scipy>=1.10",
    "jupyter>=1.0",
    "nbclient>=0.8",
    # ML/causal inference libraries
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "linearmodels>=5.0",
    # Utility libraries
    "toolz>=0.12",
    "graphviz>=0.20",
    # Optimization (for synthetic control)
    "cvxpy>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "nbformat>=5.0",
    "jsonschema>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["facure_augment*"]

[tool.setuptools.package-data]
facure_augment = [
    "data/facure/*.csv",
    "data/extended/*.csv",
    "schema/*.json",
    "config/*.yaml",
]
