[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "augmented"
version = "0.1.0"
description = "Augmented Causal Inference notebooks based on Facure's 'Causal Inference for the Brave and True'"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Brandon Behring"}
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "statsmodels>=0.14",
    "scipy>=1.10",
    "jupyter>=1.0",
    "nbclient>=0.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "nbformat>=5.0",
    "jsonschema>=4.0",
]

[tool.setuptools.packages.find]
where = [".."]
include = ["augmented*"]

[tool.setuptools.package-data]
augmented = [
    "data/facure/*.csv",
    "data/extended/*.csv",
    "schema/*.json",
    "config/*.yaml",
]
